Don't use xmlRecoverFile, use xmlReadFile

xmlRecoverFile never errors out (returning a non-null file). So invalid
XML files can't be detected.

https://bugzilla.gnome.org/show_bug.cgi?id=679204